--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <script src="Ex2.js" defer></script>-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1> This is my files </h1>-->
+<!--</body>-->
+<!--</html>-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="Ex2.js" defer></script>
+    <script src="Ex1.js" defer></script>
     <title>Title</title>
 </head>
 <body>
-<h1> This is my files </h1>
+<h1> Check the Console </h1>
 </body>
 </html>
+
+
+
